--- a/references.bib
+++ b/references.bib
@@ -1,8 +1,45 @@
+@article{Koren:2009:MFT:1608565.1608614,
+ author = {Koren, Yehuda and Bell, Robert and Volinsky, Chris},
+ title = {Matrix Factorization Techniques for Recommender Systems},
+ journal = {Computer},
+ issue_date = {August 2009},
+ volume = {42},
+ number = {8},
+ month = aug,
+ year = {2009},
+ issn = {0018-9162},
+ pages = {30--37},
+ numpages = {8},
+ url = {http://dx.doi.org/10.1109/MC.2009.263},
+ doi = {10.1109/MC.2009.263},
+ acmid = {1608614},
+ publisher = {IEEE Computer Society Press},
+ address = {Los Alamitos, CA, USA},
+ keywords = {Computational intelligence, Computational intelligence, Netflix Prize, Matrix factorization, Matrix factorization, Netflix Prize}
+} 
+
+@INPROCEEDINGS{Bertin-Mahieux2011,
+  author = {Thierry Bertin-Mahieux and Daniel P.W. Ellis and Brian Whitman and Paul Lamere},
+  title = {The Million Song Dataset},
+  booktitle = {{Proceedings of the 12th International Conference on Music Information
+	Retrieval ({ISMIR} 2011)}},
+  year = {2011},
+  owner = {thierry},
+  timestamp = {2010.03.07}
+}
+
 @misc{cosineSimilarity,
   title={Introduction to Information Retrieval},
   author={Christopher D. Manning, Prabhakar Raghavan and Hinrich Schütze},
   url={\url{http://nlp.stanford.edu/IR-book/html/htmledition/dot-products-1.html}},
   year={2008},
   publisher={Cambridge University Press}
+}
+
+@misc{MatrixFactWithTensorFL,
+title={Matrix Factorization with Tensorflow},
+author={Katherine Bailey},
+url={\url{http://katbailey.github.io/post/matrix-factorization-with-tensorflow/}},
+year={2016}
 }
 
