--- a/Documentation.tex
+++ b/Documentation.tex
@@ -84,13 +84,13 @@ Main goals of the project are to:
 This section lists the elements constituting the solution of the problem at hand.
 
 \subsection{Data set}
-The essence part of the project is the data set on which the prediction model will be created and evaluated. The archive called 'The Million Song Dataset'\cite{Bertin-Mahieux2011} provides a listing of a million tracks along with their features and a real user preference set. In this project the features of the tracks are ignored, instead the focus is put on the users' taste in music.
+The essence part of the project is the data set on which the prediction model will be created and evaluated. The archive named 'The Million Song Dataset'\cite{Bertin-Mahieux2011} provides a listing of a million tracks along with their features and a real user preference set. In this project the features of the tracks are ignored, instead the focus is put on the users' taste in music.
 The data set used in the obligatory part is limited only to a randomly chosen 1\% of the whole 280 GB repository.
 
 \subsection{Prediction model}
 Collaborative Filtering is an approach to finding new content for recommendation to a user, which depends mostly on 'the wisdom of the crowd', where suggested music comes from other users' playlists. 
 This project will utilize the idea presented in the paper "Matrix Factorization
-Techniques for Recommender Systems"\cite{Koren:2009:MFT:1608565.1608614} written by the winners of 'Netflix Prize'. The concept behind it is that given a user - track preference matrix:
+Techniques for Recommender Systems"\cite{Koren:2009:MFT:1608565.1608614} written by the winners of the 'Netflix Prize'. The concept behind it is that given a user - track preference matrix:
 
 \begin{table}[h!]
 \centering
@@ -138,7 +138,7 @@ Assessment of the results of a recommender system is not straight forward, since
 \end{itemize}
 
 \subsection{Assumptions and constraints}
-User input playlist is given with a play count for each of the tracks. Play count is treated as a measure of liking a user would has to each track.
+User input playlist is given with a play count for each of the tracks. Play count is treated as a measure of liking a user has to each track.
 
 \iffalse
 \section{Development specifics}
