--- a/Documentation.tex
+++ b/Documentation.tex
@@ -4,7 +4,7 @@
 %%%
 %%% Copyright: http://www.howtotex.com/
 %%% Initial version 19.04.2016
-%%% 
+%%% Final version 28.06.2016
 
 %%% Preamble
 \documentclass{article}
@@ -16,6 +16,7 @@
 \usepackage[breaklinks,hidelinks]{hyperref}
 \usepackage{natbib}
 \usepackage{soul, color}
+\usepackage{varioref}
 
 \usepackage[english]{babel}						% English language/hyphenation
 \usepackage[protrusion=true,expansion=true]{microtype}			% Better typography
@@ -38,7 +39,7 @@
 		\usefont{OT1}{bch}{b}{n}
 		\normalfont \normalsize \textsc{Warsaw University of Technology} \\ [25pt]
 		\horrule{1pt} \\[0.4cm]
-		\normalfont \normalsize Project proposal\\
+		\normalfont \normalsize Project documenation\\
 		\huge Music recommendation system \\[0.3cm]
 		\normalfont \normalsize EINIS 2016L\\
 		\horrule{1pt} \\[0.5cm]
@@ -61,23 +62,10 @@
 The subject of the project is to create a recommendation system which will aid finding music tracks of ones liking. To achieve this, Collaborative Filtering together with Matrix Factorization technique will be used. Such an approach makes the solution domain agnostic and does not require to know feature details of ranked items. This makes it highly reusable for other content if only user preferences are available.
 
 \subsection{Goals and objectives}
-Objectives have been divided into two groups. The obligatory part, which is the key of the project, will be complete in whole. The optional piece will be left to decide if it should be executed at all, depending on the time required and result obtained from the first stage. 
-
-\subsection{Obligatory}
 Main goals of the project are to:
 \begin{itemize}
 	\item create a music recommender program, which outputs tracks based on an input playlist;
 	\item evaluate the resulting output.
-\end{itemize}
-
-\subsection{Optional}
-\begin{itemize}
-\item A few track features will be incorporated into the Collaborative Filtering model to aid the latent feature matrices creation.
-\item A possible extension is to use a much larger music data set and improve the computation time using either:
-\begin{itemize}
-	\item the Apache Spark library and deploying the solution to a cloud cluster;
-	\item the TensorFlow\cite{MatrixFactWithTensorFL} library and utilizing the GPU of a local machine or deploying the program to a cloud for computing.
-\end{itemize}
 \end{itemize}
 
 \section{Task analysis}
@@ -85,14 +73,14 @@ This section lists the elements constituting the solution of the problem at hand
 
 \subsection{Data set}
 The essence part of the project is the data set on which the prediction model will be created and evaluated. The archive named 'The Million Song Dataset'\cite{Bertin-Mahieux2011} provides a listing of a million tracks along with their features and a real user preference set. In this project the features of the tracks are ignored, instead the focus is put on the users' taste in music.
-The data set used in the obligatory part is limited only to a randomly chosen 1\% of the whole 280 GB repository.
+The data set used for the project consists of 2M user-track-rating triplets accompanied by a track listing of 1M items including EchoNest trackIds and track names.
 
 \subsection{Prediction model}
 Collaborative Filtering is an approach to finding new content for recommendation to a user, which depends mostly on 'the wisdom of the crowd', where suggested music comes from other users' playlists. 
 This project will utilize the idea presented in the paper "Matrix Factorization
-Techniques for Recommender Systems"\cite{Koren:2009:MFT:1608565.1608614} written by the winners of the 'Netflix Prize'. The concept behind it is that given a user - track preference matrix:
+Techniques for Recommender Systems"\cite{Koren:2009:MFT:1608565.1608614} written by the winners of the 'Netflix Prize'. The concept behind it is that given a user - track preference matrix see table \vref{tab:userPref}.
 
-\begin{table}[h!]
+\begin{table}[!h]
 \centering
   \begin{tabular}{c|cccc}
              & \rotatebox[origin=c]{90}{Track 1} & \rotatebox[origin=c]{90}{Track 2} & \rotatebox[origin=c]{90}{Track 3} & \rotatebox[origin=c]{90}{Track 4} \\ \hline
@@ -101,12 +89,13 @@ Techniques for Recommender Systems"\cite{Koren:2009:MFT:1608565.1608614} written
           User 3 & 9  & 0  & ?  & 2  \\
           User 4 & 1  & 8  & ?  & 0
   \end{tabular}
-\caption {User - Track preference matrix} \label{tab:title}
+\caption {User - Track preference matrix}
+\label{tab:userPref}
 \end{table}
 
-the algorithm searches for latent feature matrices:
+the algorithm searches for latent feature matrices see \vref{tab:latent1}, which when multiplied would create the input preference matrix. The latent matrices are calculate by iteratively improving them to find their optimal values and predict the missing values in the original user - item matrix.
 
-\begin{table}[h!]
+\begin{table}[!h]
 \centering
   \begin{tabular}{c|cc}
              & \rotatebox[origin=c]{90}{Feature 1} & \rotatebox[origin=c]{90}{Feature 2} \\ \hline
@@ -115,20 +104,20 @@ the algorithm searches for latent feature matrices:
           User 3 & ? & ?  \\
           User 4 & ? & ?  
   \end{tabular}
-\caption {Users - Latent features matrix} \label{tab:title}
+\caption {Users - Latent features matrix}
+\label{tab:latent1}
 \end{table}
 
-\begin{table}[h!]
+\begin{table}[!h]
 \centering
   \begin{tabular}{c|cccc}
              & \rotatebox[origin=c]{90}{Track 1} & \rotatebox[origin=c]{90}{Track 2} & \rotatebox[origin=c]{90}{Track 3} & \rotatebox[origin=c]{90}{Track 4} \\ \hline
           Feature 1 & ?  & ?  & ?  & ?  \\
           Feature 2 & ?  & ?  & ?  & ?  
   \end{tabular}
-\caption {Latent features - tracks matrix} \label{tab:title}
+\caption {Latent features - tracks matrix}
+\label{tab:latent2}
 \end{table}
-
-which when multiplied would create the input preference matrix. The latent matrices are calculate by iteratively improving them to find their optimal values and predict the missing values in the original user - item matrix.
 
 \subsection{Evaluation method}
 Assessment of the results of a recommender system is not straight forward, since for true grading of the solution, real users would need to evaluate it and share their opinion on the usefulness of the program. However, to achieve the goal of this project, two ways of testing are proposed:
@@ -140,22 +129,10 @@ Assessment of the results of a recommender system is not straight forward, since
 \subsection{Assumptions and constraints}
 User input playlist is given with a play count for each of the tracks. Play count is treated as a measure of liking a user has to each track.
 
-\iffalse
-\section{Development specifics}
-
-\subsection{Data model}
-
-\subsection{Python + Spotify Web API}
-(for creating the output playlist)
-sqlite https://docs.python.org/2/library/sqlite3.html
-
-\subsection{Tensorflow, Mahout, Fink}
-
 \section{Solution overview}
-TODO
-Pearson
-Mahout recommender
-\cite{cosineSimilarity}
+
+\subsection{Tools}
+The whole program was implemented in Python, only accompanied by a Bash installation script. For assistance at accessing the Spotify Web API, the Spotipy library was used.
 
 \subsection{Program steps}
 \begin{itemize}
@@ -172,11 +149,21 @@ Mahout recommender
 \end{itemize}
 
 \section{Results evaluation}
-TODO
+As mentioned before, it may not be objective to assess the results by user taste. However, the generated playlist was found to be present fine suggestions.
+
+\subsection{Suggested improvements}
+\begin{itemize}
+\item A few track features might be incorporated into the Collaborative Filtering model to aid the latent feature matrices creation.
+\item A possible extension is to use a much larger music data set and improve the computation time using either:
+\begin{itemize}
+	\item the Apache Spark library and deploying the solution to a cloud cluster;
+	\item the TensorFlow\cite{MatrixFactWithTensorFL} library and utilizing the GPU of a local machine or deploying the program to a cloud for computing.
+\end{itemize}
+\end{itemize}
+
 
 Without the data set there would be a cold start problem.
 
-\fi
 
 %\begin{figure}[h!]
 %\centering
