--- a/Documentation.tex
+++ b/Documentation.tex
@@ -77,7 +77,7 @@ The essence part of the project is the data set on which the prediction model wi
 The data set used for the project consists of 2M user-track-rating triplets accompanied by a track listing of 1M items including EchoNest trackIds and track names.
 
 \subsection{Prediction model}
-Collaborative Filtering is an approach to finding new content for recommendation to a user, which depends mostly on 'the wisdom of the crowd', where suggested music comes from other users' playlists. 
+Collaborative Filtering is an approach to finding new content for recommendation to a user, which depends mostly on 'the wisdom of the crowd', where suggested music comes from other users' playlists\cite{MatrixFactPython}. 
 This project will utilize the idea presented in the paper "Matrix Factorization
 Techniques for Recommender Systems"\cite{Koren:2009:MFT:1608565.1608614} written by the winners of the 'Netflix Prize'. The concept behind it is that given a user - track preference matrix see table \vref{tab:userPref}.
 
