--- a/references.bib
+++ b/references.bib
@@ -43,3 +43,10 @@ url={\url{http://katbailey.github.io/post/matrix-factorization-with-tensorflow/}
 year={2016}
 }
 
+@misc{MatrixFactPython,
+title={Matrix Factorization: A Simple Tutorial and Implementation in Python},
+author={Albert Au Yeung},
+url={\url{http://www.quuxlabs.com/blog/2010/09/matrix-factorization-a-simple-tutorial-and-implementation-in-python/}},
+year={2010}
+}
+
